# finbuild

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/: routes_learning.py  routes_news.py
app/clients/: newsapi_client.py
app/core/: cache.py  config.py
app/data/: glossary.json  learning_content.json
app/schemas/: news.py
app/services/: chart_doctor_service.py  learn_service.py  learning_service.py  news_service.py  nlp_service.py
app/static/: styles.css
app/templates/: article.html  base.html  index.html  learn.html
app/templates/chart_doctor/: chart_doctor.html
app/templates/learn/: learn.html
app/templates/partials/: learn_concept.html  learn_popular.html  learn_quiz_results.html  news_results.html
app/templates/partials/chart_doctor/: detect_result.html  news_results.html
app/templates/partials/learn/: popular.html  term.html
app/web/: routes_chart_doctor.py  routes_learn.py  routes_pages.py
