[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "spacy>=3.8.7",
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.2",
    "pytesseract>=0.3.13",
]
